--- a/main.tex
+++ b/main.tex
@@ -265,8 +265,8 @@
   \vspace{-6.8mm}
   \resumeItemListStart
   \item { Core Team Member of college Software Development Cell.} 
-  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}}, and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team of 4 members. Utilized \customtext{\textbf{\textcolor{sand}{Agile}}} methodologies \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to streamline development processes \& ensure efficient collaboration efficiency by 25\%.}
-  \item {Deployed data processing systems, saving \customtext{\textbf{\textcolor{sand}{20+ hrs/week}}} in manual effort for faculty and staff.}
+  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}}, and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team of 4 members. \customtext{\textbf{\textcolor{sand}{Agile}}} methods \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to guarantee effective cooperation \& optimize development processes by 25\%.}
+  \item { Implemented data processing technology, saving academics and staff more than \customtext{\textbf{\textcolor{sand}{20+ hrs}}} a week of manual labor.}
   \resumeItemListEnd
   
   \vspace{-1.6mm}
@@ -290,8 +290,8 @@
 	{} %Event Dates
 	
 	\resumeItemListStart
-	\item { Developed a \customtext{\textbf{\textcolor{sand}{two-click}}} attendance marking system that allows faculty to take attendance using a \customtext{\textbf{\textcolor{sand}{QR code}}}, transitioning from a pen-and-paper method to a digital platform.}
-	\item { Created a \customtext{\textbf{\textcolor{sand}{mobile app}}} enabling secure attendance marking with \customtext{\textbf{\textcolor{sand}{Google login}}}, allowing students to view their attendance history and providing detailed reporting, enhancing user experience and reducing human error.}
+	\item { Created a \customtext{\textbf{\textcolor{sand}{two-click}}} system for marking attendance that enables teachers to take attendance by a \customtext{\textbf{\textcolor{sand}{QR code}}}, switching from a paper-and-pen approach to a digital one.}
+	\item { Developed a \customtext{\textbf{\textcolor{sand}{mobile app}}} that allows students to view their attendance history, securely mark attendance using a \customtext{\textbf{\textcolor{sand}{Google login}}}, all while improving user experience and lowering the risk of human mistake.}
 	
 	\resumeItemListEnd
 	\vspace{-2.5mm}   
@@ -302,7 +302,7 @@
       {} %Event Dates
       
       \resumeItemListStart
-        \item {Provides a platform enabling \customtext{\textbf{\textcolor{sand}{real-time messaging}}}, whether for personal use or connecting with friends. Seamlessly transition between one-on-one chats \& group conversations within a \customtext{\textbf{\textcolor{sand}{user-friendly interface}}}, enhancing the online communication experience.}
+        \item {Offers a platform that makes it possible to communicate in \customtext{\textbf{\textcolor{sand}{real-time}}}, whether for personal use or connecting with friends. Seamlessly transition between one-on-one chats \& group conversations within a \customtext{\textbf{\textcolor{sand}{user-friendly interface}}}, enhancing the online communication experience.}
         \item {Refined skills in \customtext{\textbf{\textcolor{sand}{real-time communication}}} and enhanced proficiency in full-stack development.}
         
     \resumeItemListEnd
@@ -314,8 +314,9 @@
     {} %Event Dates
     
     \resumeItemListStart
-    \item {Automated ID card generation for over \customtext{\textbf{\textcolor{sand}{500 college freshers}}}, reducing administrative workload by 60\%. The intuitive interface \& efficient backend processing led to a \customtext{\textbf{\textcolor{sand}{40\% reduction}}} in onboarding time for both students and faculty.}
-    \item {Implemented automation scripts, reducing manual effort by \customtext{\textbf{\textcolor{sand}{80\%}}}.}
+    \item {Automated ID card generation for more than \customtext{\textbf{\textcolor{sand}{500 first-year college students}}}, cutting down on administrative labor by \customtext{\textbf{\textcolor{sand}{60\%}}}. The intuitive interface \& effective backend processing resulted in a \customtext{\textbf{\textcolor{sand}{40\% decrease}}} in the amount of time needed for staff \& student onboarding.
+    }
+    \item {By implementing automation scripts, \customtext{\textbf{\textcolor{sand}{80\%}}} less manual labor was required.}
     
     \resumeItemListEnd
     \vspace{-2.5mm}
@@ -326,7 +327,7 @@
     {} %Event Dates
     
     \resumeItemListStart
-    \item { Developed a \customtext{\textbf{\textcolor{sand}{Chrome extension}}} that dictates selected text on webpages, enhancing accessibility \& user experience.}
+    \item { Created a \customtext{\textbf{\textcolor{sand}{Chrome extension}}} that dictates selected text on webpages, improving accessibility \& user experience.}
     \item { Integrated feature allowing users to configure TTS to pause after a \customtext{\textbf{\textcolor{sand}{specific number}}} of words (e.g., 5 or 10) for a \customtext{\textbf{\textcolor{sand}{defined duration}}} (e.g., 1–10 seconds).}
     
     \resumeItemListEnd
@@ -400,9 +401,10 @@
 \vspace{-0.4mm}
 \resumeSubHeadingListStart
 
-\resumePORA{  \href{https://drive.google.com/file/d/1jHHO7sfI8_siICWUdF21CH2A8n44mG2_/view?usp=sharing}{Presented a winning paper at {\customtext{\textbf{\textcolor{sand}{ICIDSSD 2024, Jamia Hamdard}}}}, awarded Best Presenter \& Best Poster. {\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
-{} % Event
+\resumePORA{  \href{https://drive.google.com/file/d/1jHHO7sfI8_siICWUdF21CH2A8n44mG2_/view?usp=sharing}{Presented a winning paper } % Award 
+{at {\customtext{\textbf{\textcolor{sand}{ICIDSSD 2024, Jamia Hamdard}}}}, awarded Best Presenter \& Best Poster. {\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}}}% Event
 {} %Event Year
+{}
 
 \resumeSubHeadingListEnd
 \vspace{-4.4mm}
